[gd_scene load_steps=4 format=3 uid="uid://d3dqfqdmxphse"]

[ext_resource type="Script" uid="uid://dm36gp28pwvj6" path="res://UIs/AbilitySlots/tooltip.gd" id="1_2sklf"]
[ext_resource type="FontFile" uid="uid://bkgdnmgv0l2df" path="res://assets/fonts/smallburg-Regular.ttf" id="2_amrb2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_klael"]
bg_color = Color(0.974645, 0.941085, 0.807095, 0.858824)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.15407, 0.111877, 0.0183412, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 12
shadow_color = Color(0.0987284, 0.0987284, 0.0987284, 0.6)
shadow_size = 2

[node name="AbilityToolTip" type="Control"]
z_index = 51
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_2sklf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 208.0
offset_bottom = 232.0
theme_override_styles/panel = SubResource("StyleBoxFlat_klael")

[node name="TitleLabel" type="RichTextLabel" parent="Panel"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 200.0
offset_bottom = 48.0
theme_override_fonts/bold_font = ExtResource("2_amrb2")
theme_override_font_sizes/bold_font_size = 26
bbcode_enabled = true
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="RichTextLabel" parent="Panel"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 8.0
offset_top = 48.0
offset_right = 200.0
offset_bottom = 192.0
theme_override_fonts/normal_font = ExtResource("2_amrb2")
theme_override_fonts/bold_font = ExtResource("2_amrb2")
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 26
bbcode_enabled = true
fit_content = true

[node name="UsageLabel" type="RichTextLabel" parent="Panel"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 8.0
offset_top = 176.0
offset_right = 200.0
offset_bottom = 224.0
theme_override_fonts/normal_font = ExtResource("2_amrb2")
theme_override_fonts/bold_font = ExtResource("2_amrb2")
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 26
bbcode_enabled = true
fit_content = true
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 192.0
offset_right = 80.0
offset_bottom = 224.0
